--- a/src/main/resources/templates/admin/page/view-lapangan.html
+++ b/src/main/resources/templates/admin/page/view-lapangan.html
@@ -5,13 +5,14 @@
 <link rel="stylesheet" th:href="@{/css/plugins/view-field.css}" />
 </head>
 <body>
+
 	<div id="page-wrapper">
 		<div layout:fragment="content">
 			<div class="container-fluid">
 
+
 				<!-- Page Heading -->
 				<div class="row">
-
 					<div id="md12" class="col-lg-12">
 
 						<div id="" class="col-lg-12">
@@ -23,22 +24,19 @@
 								<div>
 									<label class="text"> 05/04/2017 15:03 </label>
 								</div>
-
 							</div>
 							<!-- end of last update -->
-
 
 							<!-- Surveyer name-->
 							<div class="col-md-2 mdtop1">
 								<div>
-									<label class="labels"> Surveyer </label>
+									<label class="labels">Surveyer</label>
 								</div>
 								<div>
-									<label class="text"> <span
-										th:text="${view.fieldName}"></span>
+									<label class="text"> 
+									<span th:text="${view.fieldName}"></span>
 									</label>
 								</div>
-
 							</div>
 							<!-- end of surveyer name-->
 							<div class="col-md-6 mdtop1" style="padding-right: unset;">
@@ -49,14 +47,10 @@
 						    		<ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="dropdown_action" >
 						              <li><a th:href="@{/admin/edit-field/10}">Edit</a></li>
 						              <li><a href="#" onclick="centerModal(10)">Delete</a></li>
-	       
 						            </ul>
 						        </div>								
-
 							</div>
-
 						</div>
-
 						<!-- Field img -->
 						<div class="col-md-6 mdtop6">
 							<img src="/img/aa.jpg" height="168" width="360">
@@ -115,7 +109,6 @@
 								</div>
 							</div>
 							<!-- end of jam buka-->
-
 							<!-- harga-->
 							<div class="col-md-12 mdtop5">
 								<div>
@@ -124,7 +117,6 @@
 								<div class="textes">
 									<span th:text="${view.price}"></span>
 								</div>
-
 							</div>
 							<!-- end of harga-->
 						</div>
