--- a/src/main/resources/templates/admin/page/map.html
+++ b/src/main/resources/templates/admin/page/map.html
@@ -3,10 +3,9 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Map</title>
-<link rel="stylesheet" th:href="@{/css/plugins/view-field.css}" />
 <style>
 #map {
-	height: 660px;
+	height: 680px;
 	width: 100%;
 	position: static;
 	z-index: 0;
@@ -16,19 +15,69 @@
 	padding-left: 71px !important;
 }
 .map-box {
-	height: 660px;
+	height: 680px;
 	width: 100%;
 	position: relative;
 }
 .form-box {
 	position: absolute;
 	top: 0;
-	height: 660px;
+	height: 680px;
 	width: 33%;
 	right: 0px;
 	background-color: rgba(255, 255, 255, 0.8);
 	z-index: 10;
 	padding-top: 0px;
+}
+#dMap {
+    background-color: white!important;
+    color: #545454!important;
+    border: 1px solid #898989;
+    border-top-color: rgb(137, 137, 137);
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-right-color: rgb(137, 137, 137);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-bottom-color: rgb(137, 137, 137);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-color: rgb(137, 137, 137);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-image-source: initial;
+    border-image-slice: initial;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+}
+.labelss {
+    text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;
+    margin-left:60px;
+    margin-top: 0px;
+}
+.labelsb{
+	text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;
+}
+.texted {
+    margin-left:60px !important;
+}
+.textes{
+	
+}
+.labelsa {
+    text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;
+}
+.labelst{
+	text-decoration-color: #808080!important;
+    font-size: 12px;
+    font-weight: normal;
 }
 </style>
 </head>
@@ -37,41 +86,50 @@
 		<div class="padding-md content content-list" layout:fragment="content">
 			<div class="map-box">
 				<div id="map"></div>
-				
+
 				<div class="form-box collapse">
 					<div class="row">
-						<div id="md12" class="col-lg-12">       
+						<div id="md12" class="col-lg-12">
 							<div id="" class="col-lg-12">
 								<!-- last update -->
 								<div class="col-md-2 mdtop1">
 									<div>
-										<label class="labels"> Latest update </label>
+										<label class="labelst"> Latest Update </label>
 									</div>
 									<div>
-										<label id="latestupdate" value=""></label>
+										 <label id="latestupdate" value=""></label>  
 									</div>
-								</div>
+								</div> 
 								<!-- end of last update -->
+								
 								<!-- Surveyer name-->
-								<div class="col-md-2 mdtop1">
+								<div class="col-md-3 mdtop1">
 									<div>
-										<label class="labels"> Surveyer </label>
+										<label class="labelss"> Surveyer </label>
 									</div>
 									<div>
-										<label id="surveyername" value=""></label>
-									</div> 
+										 <label class="texted" id="surveyer" value=""></label>			
+									</div>								
+				<!-- Untuk ambil data yang dikirim controller -->
+				<div class="listFieldMap" th:each="ffmap,iterasi : ${futsalField}">
+					<span hidden id="idFutsalField" name="idFutsalField" value="" class="idFutsalField" th:text="${ffmap.idFutsalField}"></span>
+					<span hidden id="fieldName" name="fieldName" value="" class="fieldName" th:text="${ffmap.fieldName}"></span> 
+					<span hidden id="latitude" name="latitude" value="" class="latitude" th:text="${ffmap.latitude}"></span> 
+					<span hidden id="longitude" name="longitude" value="" class="longitude" th:text="${ffmap.longitude}"></span>
+				</div>
 								</div>
+								<!-- end of Latest Update-->
 								<!-- end of surveyer name-->
-								<div class="col-md-6 mdtop1" style="padding-right: unset;">
-									<div class="dropdown" style="float: right; right: 0;">
-										<a id="dLabel" role="button" data-toggle="dropdown"
+								<div class="col-md-6 mdtop1" style="left: 92px;">
+									<div class="dropdown" style="">
+										<a id="dMap" role="button" data-toggle="dropdown"
 											class="btn btn-primary" data-target="#" href="/page.html">
 											<i class="icon-gear"></i> Action <span class="caret"></span>
 										</a>
 										<ul class="dropdown-menu multi-level" role="menu"
 											aria-labelledby="dropdownMenu" id="dropdown_action">
 											<li><a th:href="@{/admin/edit-field/10}">Edit</a></li>
-											<li><a href="#" onclick="centerModal(10)">Delete</a></li>
+											<li><a href="#" onclick="centerModal(10)">Cancel</a></li>
 										</ul>
 									</div>
 								</div>
@@ -83,147 +141,137 @@
 							<!--end of field img-->
 							<div class="col-lg-12">
 								<!-- detail -->
-								<div class="col-md-6 mdtop2" id="title">
-									 <div></div> 
+								<div class="col-md-6 mdtop2">
+									<!-- <div class="titles">
+											<label id="surveyer" value=""></label>	
+									</div> -->
+									<div class="labelsb">
+                  						<label id="location" value=""></label> 
+                					</div>
 								</div>
+								
 								<!-- end of detail-->
+								
 								<div class="col-lg-12 mdtop3">
+								
 									<!-- phone number -->
+									
 									<div class="col-md-2 mdtop4">
 										<div>
-											<label class="labels">Telepon</label>
-										</div>										
+											<label class="labelst">Telepon</label>
+										</div>
 										<div>
-											<label id="telepon" value=""></label>
-										</div> 
-									</div>
-									<div class="col-md-3 mdtop4">
-										<div>
-											<label class="labels">Jumlah Lapangan</label>
-										</div> 
-										<div>
-											<label id="jumlahlapangan" value=""></label>
+											<label id="telepon" value=""></label> 
+											
 										</div>
 									</div>
 									
+									<!-- end of phone number-->
+
+               						 <!-- number of field -->
+									
+									<div class="col-md-3 mdtop4">
+										<div>
+											<label class="labelss">Jumlah Lapangan</label>
+										</div>
+										<div>
+											<label class="labelss" id="jumlahlapangan" value=""></label> 									
+										</div>
+									</div>
+									<!-- end of number of field -->
 								</div>
 								<!-- jam buka -->
 								<div class="col-md-12 mdtop5">
 									<div>
-										<label class="labels">Jam Buka</label>
+										<label class="labelst">Jam Buka</label>
 									</div>
 									<div>
 										<label id="jam_buka" value=""></label>
-									</div>
-									<!-- <div>
+									</div> 
+									 <div>
 										<label class="texts">Senin-Sabtu</label>
-									</div> -->
-									<!-- <div>
+									</div> 
+									<div>
 										<label class="textes">08:00-20:00</label>
-									</div> -->
-								</div>
+									</div>
+									</div>
 								<!-- end of jam buka-->
 								<!-- harga-->
 								<div class="col-md-12 mdtop5">
 									<div>
-										<label class="labels">Harga Normal Per Jam</label>
-									</div>	
-									<div>
-										<label id="harga" value=""></label>
-									</div>		
-								</div>			
-
+										<label class="labelst">Harga Normal Per Jam</label>
+									</div>
+									<div class="textes">
+                  						<label id="harga" value=""></label>
+                					</div>
+								</div>
+								<!-- end of harga-->
 							</div>
 						</div>
 						<div class="col-lg-12"></div>
 					</div>
-					<script>		
-					var loc = [
-						{
-							"id ": "1",
-							"latest_update":" 01 Agustus 2017",
-							"name": "jl. palmerah barat no. 4, jakarta pusat",
-							"lat": "-6.208116299999999",
-							"lng": "106.7926943"
-						},
-						{
-							"id": "2",
-							"latest_update": "02 Agustus 2017",
-							"name": "jl. asia afrika pintu ix, gelora senayan, jakarta pusat 10270",
-							"lat": "-6.224614400000001",
-							"lng": "106.79716540000004"
-						},
-						{
-							"id": "3",
-							"latest_update": "11 Agustus 2017",
-							"name": "jl. raya kebayoran baru (komplek hankam), jakarta selatan",
-							"lat": "-6.2272487",
-							"lng": "106.77768279999998"
-						},
-						{
-							"id": "4",
-							"latest_update": "10 Agustus 2017",
-							"name": "jl. raden inten ii no. 46, duren sawit, jakarta timur 13440",
-							"lat": "-6.246799299999999", 
-							"lng": "106.91970630000003"
-						},
-						{
-							"id": "5",
-							"latest_update": "09 Agustus 2017",
-							"name": "jl. danau sunter barat, blok a4 no. 8-10, jakarta utara",
-							"lat": "-6.1421",
-							"lng": "106.85725400000001"
-						},
-						{
-							"id": "6",
-							"latest_update": "08 Agustus 2017",
-							"name": "jl. raya serpong km 7, kompleks multi guna blok b2 no. 8, tangerang",
-							"lat": "-6.212711",
-							"lng": "106.68357609999998"
-						},
-						{
-							"id": "7",
-							"latest_update": "07 Agustus 2017",
-							"name": "jl. mangga besar xi no.2, tangki, tamansari, kota jakarta barat, daerah khusus ibukota jakarta 11170",
-							"lat": "-6.148039000000001",
-							"lng":"106.82568800000001"
-						},
-						{
-							"id": "8",
-							"latest_update": "06 Agustus 2017",
-							"name": "rscm, kenari, central jakarta city, jakarta, indonesia",
-							"lat": "-6.197180299999999",
-							"lng": "106.84686999999997"
-						},
-						{
-							"id": "9",
-							"latest_update": "05 Agustus 2017",
-							"name": "futsal monas",
-							"lat": "-6.174511",
-							"lng": "106.82896089999997"
-						},
-						{
-							"id": "10",
-							"latest_update": "04 Agustus 2017",
-							"name": "universitas negeri jakarta",
-							"lat": "-6.1946737",
-							"lng": "106.87822979999999"
-						},
-						{
-							"id": "11",
-							"latest_update": "03 Agustus 2017",
-							"name": "gedung pertemuan pertamina",
-							"lat": "-6.178196",
-							"lng": "106.867705"
-						}]; 
+					<script>
 					
-						 function initMap() {
+					var textVal = [];
+					var fillLoc = [];
+					var countIndex = 0;
+					var countListMap = 0;
+					$( "span" ).each( function( index, element ){
+					     textVal[index] = $(this).text();
+					     countIndex ++;
+					})
+					var loc = [];
+					 $.each($('.listFieldMap'),function(index, value) {
+						 	var idFutsalField, fieldName, latitude, longitude;
+							for(var x = 0 ; x < 4 ; x ++){
+									if(x == 0) {
+										idFutsalField = textVal[countListMap];
+									}
+									else if(x == 1){
+										fieldName = textVal[countListMap];
+									}
+									else if(x == 2){
+										latitude = textVal[countListMap];
+									}
+									else{
+										longitude = textVal[countListMap];
+									}
+								countListMap++;
+							}
+							 loc.push({idFutsalField: idFutsalField, fieldName: fieldName, latitude: latitude, longitude : longitude});
+						});
+					/* var obj = JSON.parse(loc[1]); */
+					//console.log(listMapObject);
+					//console.log(loc);
+				/* var loc = [
+						{
+							"idFutsalField": $('#idFutsalField').html(),
+							"surveyer": $('#fieldName').html(),
+							"latitude": $('#latitude').html(),
+							"longitude": $('#longitude').html()					
+						}
+						]; 									
+				        // Memunculkan semua data yang dibuat di var loc        
+				      $.each(loc, function(){
+				    	 $.each(this, function (name, value){
+				    		 console.log(name + '=' + value);
+				    	 }); 
+				     }); */  
+				     
+				      // Memunculkan semua data yang dibuat di database
+					/*  $.each(loc, function(){
+						 $.each($('.listFieldMap'),function(index, value) {
+										console.log(index + ':' + $(value).text());
+									});   
+				     }); */
+
+						function initMap(){
 							var map = new google.maps.Map(document.getElementById('map'), {
 								zoom : 13,
-								center : {lat : -6.197180299999999, lng : 106.84686999999997}
+								center : {lat : -6.197180299999999,lng : 106.84686999999997}
 							});
-							
-							setMarkers(map);	
+							setMarkers(map);
+							var markers = [];
 							function setMarkers(map) {
 								var image = {
 									url : 'https://image.ibb.co/dznXH5/pointer.png',
@@ -233,49 +281,74 @@
 									origin : new google.maps.Point(0, 0),
 									anchor : new google.maps.Point(0, 50)
 								};
-								
 								var shape = {
-								coords : [ 1, 1, 1, 50, 48, 50, 48, 1 ],
-								type : 'poly'
-								};			
+									coords : [ 1, 1, 1, 50, 48, 50, 48, 1 ],
+									type : 'poly'
+								};
 								for (var i = 0; i < loc.length; i++) {
 									var locations = loc[i];
-									var latLng = new google.maps.LatLng(locations.lat, locations.lng);
+									var latLng = new google.maps.LatLng(locations.latitude, locations.longitude);
 									var marker = new google.maps.Marker({
 										position : latLng,
-										map : map,
+										map : map, 
 										icon : image,
 										shape : shape,
-										title : locations.name,
-										id: locations.id,
-										latest_update:locations.latest_update
-									});					
-								google.maps.event.addListener(marker, 'click', function() {
-											console.log(this.title)
-											console.log(this.id)
-											map.setCenter(this.getPosition());
-											$(".form-box").removeClass("collapse");
-											test(this.title, this.id, this.latest_update);	
-								});
+										title : locations.fieldName,
+										id : locations.idFutsalField,
+										location: locations.location
+									});
+									google.maps.event.addListener(marker,'click',function(){
+										var futsalField = {};
+										/* console.log(this.id);  */
+										futsalField.idFutsalField = this.id;
+										futsalField.fieldNeme = this.fieldName;
+										$.ajax({
+										 type: "POST",
+										 url: "/detail-field-map",
+										 data: futsalField,
+										 timeout: 600000,
+										 success: function (data) { 									
+											var latLng = new google.maps.LatLng(data.latitude, data.longitude);
+											map.setCenter(latLng);
+											$(".form-box").removeClass("collapse");													                 	
+											$('#surveyer').html(data.fieldName);
+											$('#location').html(data.detailLocation);
+											 $('#latestupdate').html(data.latestUpdate); 
+											$('#telepon').html(data.phone);
+											$('#jumlahlapangan').html(data.numberOfField); 
+											$('#jam_buka').html(data.openingHours);
+											$('#harga').html(data.price);
+											},
+											error: function (e) {
+											   console.log("gagal");}
+											  });
+														
+											//Untuk Bind Data Marker dengan Page yang dihasilkan
+											/* bind(
+											this.title,
+											this.id
+											); */
+											for (var j = 0; j < markers.length; j++) {
+											markers[j].setIcon("https://image.ibb.co/dznXH5/pointer.png");}
+											marker.setIcon("https://image.ibb.co/kytxH5/selected_map.png");});
 								}
-							} 
-						 }		 
-						 function test(title,id, latest_update){
-							 $('#surveyername').html(title);
-							 $('#latestupdate').html(latest_update);
-							 $('#telepon').html(id);
-							 $('#jumlahlapangan').html(id);
-							 $('#jam_buka').html(id);
-							 $('#harga').html(id);
-						 }
-			  	</script>
-					 <script 
-						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDByR5Y8ovC_QFWCQnHcdGYGYzqLZfZ1ew&callback=initMap">	
-					</script> 
-					
-					<script>	
+							}
+						}			
+				     	// Untuk Bind Data Marker dengan Page yang dihasilkan
+						/* function bind(title, idFutsalField) {
+							$('#surveyername').html(title);
+							$('#latestupdate').html(title);
+							$('#telepon').html(idFutsalField);
+							$('#jumlahlapangan').html(idFutsalField); 
+							$('#jam_buka').html(idFutsalField);
+							$('#harga').html(idFutsalField);
+						} */
 					</script>
-				<script src="/js/futsalfield.js"></script>
+					<script
+						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDByR5Y8ovC_QFWCQnHcdGYGYzqLZfZ1ew&callback=initMap">	
+					</script>
+					<script>	
+					</script>				
 				</div>
 			</div>
 		</div>
