--- a/src/main/resources/templates/admin/page/map.html
+++ b/src/main/resources/templates/admin/page/map.html
@@ -4,21 +4,21 @@
 <head>
 <title>Map</title>
 <link rel="stylesheet" th:href="@{/css/plugins/view-field.css}" />
-
 <style>
 #map {
-	height: 640px;
+	height: 660px;
 	width: 100%;
 	position: static;
 	z-index: 0;
 }
 
 #page-wrapper {
-    padding: 5px !important;
-    padding-left: 71px !important;
-} 
+	padding: 0px !important;
+	padding-left: 71px !important;
+}
+
 .map-box {
-	height: 640px;
+	height: 660px;
 	width: 100%;
 	position: relative;
 }
@@ -26,8 +26,8 @@
 .form-box {
 	position: absolute;
 	top: 0;
-	height: 650px;
-	width: 30%;
+	height: 660px;
+	width: 33%;
 	right: 0px;
 	background-color: rgba(255, 255, 255, 0.8);
 	z-index: 10;
@@ -40,219 +40,291 @@
 		<div class="padding-md content content-list" layout:fragment="content">
 			<div class="map-box">
 				<div id="map"></div>
+
 				<div class="form-box collapse">
-			
-				<div class="row">
-					<div id="md12" class="col-lg-12">
-
-						<div id="" class="col-lg-12">
-							<!-- last update -->
-							<div class="col-md-2 mdtop1">
-								<div>
-									<label class="labels"> Latest update </label>
-								</div>
-								<div>
-									<label class="text"> 05/04/2017 15:03 </label>
-								</div>
-
-							</div>
-							<!-- end of last update -->
-
-
-							<!-- Surveyer name-->
-							<div class="col-md-2 mdtop1">
-								<div>
-									<label class="labels"> Surveyer </label>
-								</div>
-								<!-- <div>
-									<label class="text"> <span
-										th:text="${view.fieldName}"></span>
-									</label>
-								</div> -->
-							</div>
-							<!-- end of surveyer name-->
-							<div class="col-md-6 mdtop1" style="padding-right: unset;">
-							<div class="dropdown" style="float: right; right:0;" >
-						            <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-primary" data-target="#" href="/page.html">
-						               <i class="icon-gear"></i> Action <span class="caret"></span>
-						            </a>
-						    		<ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="dropdown_action" >
-						              <li><a th:href="@{/admin/edit-field/10}">Edit</a></li>
-						              <li><a href="#" onclick="centerModal(10)">Delete</a></li>
-	       
-						            </ul>
-						        </div>								
-							</div>
-						</div>
-						<!-- Field img -->
-						<div class="col-md-6 mdtop6">
-							<img src="/img/aa.jpg" height="150" width="280">
-						</div>
-						<!--end of field img-->
-						<div class="col-lg-12">
-							<!-- detail -->
-							<div class="col-md-6 mdtop2 ">
-								<!-- <div>
-									<label class="titles"><span th:text="${view.fieldName}"></span></label>
-								</div> -->
-								<!-- <div class="labels">
-									<span th:text="${view.location}"></span>
-								</div> -->
-							</div>
-							<!-- end of detail-->
-							<div class="col-lg-12 mdtop3">
-								<!-- phone number -->
-								<div class="col-md-2 mdtop4">
+					<div class="row">
+						<div id="md12" class="col-lg-12">
+							<div id="" class="col-lg-12">
+								<!-- last update -->
+								<div class="col-md-2 mdtop1">
 									<div>
-										<label class="labels">Telepon </label>
+										<label class="labels"> Latest Update </label>
+									</div>
+									<div>
+										<label id="latestupdate" value=""></label>
+										<!-- <label class="text"> 05/04/2017 15:03 </label> -->
+									</div>
+								</div>
+								<!-- end of last update -->
+								<!-- Surveyer name-->
+								<div class="col-md-2 mdtop1">
+									<div>
+										<label class="labels"> Surveyer </label>
+									</div>
+									<div>
+										<label id="surveyername" value=""></label>
+									</div>
+									<div id="listFieldMap" class="listFieldMap"
+										th:each="ffmap,iterasi : ${futsalField}">
+										<!-- <span hidden id="index" name="index" th:text="${iterasi.index}"></span> -->
+										<span hidden id="idFutsalField" name="idFutsalField"
+											class="idFutsalField" th:text="${ffmap.idFutsalField}"></span>
+										<span hidden id="fieldName" name="fieldName" class="fieldName"
+											th:text="${ffmap.fieldName}"></span> <span hidden
+											id="latitude" name="latitude" class="latitude"
+											th:text="${ffmap.latitude}"></span> <span hidden
+											id="longitude" name="longitude" class="longitude"
+											th:text="${ffmap.longitude}"></span>
+									</div>
+
+								</div>
+								<!-- end of surveyer name-->
+								<div class="col-md-6 mdtop1" style="padding-right: unset;">
+									<div class="dropdown" style="float: right; right: 0;">
+										<a id="dLabel" role="button" data-toggle="dropdown"
+											class="btn btn-primary" data-target="#" href="/page.html">
+											<i class="icon-gear"></i> Action <span class="caret"></span>
+										</a>
+										<ul class="dropdown-menu multi-level" role="menu"
+											aria-labelledby="dropdownMenu" id="dropdown_action">
+											<li><a th:href="@{/admin/edit-field/10}">Edit</a></li>
+											<li><a href="#" onclick="centerModal(10)">Delete</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<!-- Field img -->
+							<div class="col-md-6 mdtop6">
+								<img src="/img/aa.jpg" height="150" width="320">
+							</div>
+							<!--end of field img-->
+							<div class="col-lg-12">
+								<!-- detail -->
+								<div class="col-md-6 mdtop2" id="title">
+									<div></div>
+								</div>
+								<!-- end of detail-->
+								<div class="col-lg-12 mdtop3">
+									<!-- phone number -->
+									<div class="col-md-2 mdtop4">
+										<div>
+											<label class="labels">Telepon</label>
+										</div>
+										<div>
+											<label id="telepon" value=""></label>
+										</div>
+									</div>
+									<div class="col-md-3 mdtop4">
+										<div>
+											<label class="labels">Jumlah Lapangan</label>
+										</div>
+										<div>
+											<label id="jumlahlapangan" value=""></label>
+										</div>
+									</div>
+
+								</div>
+								<!-- jam buka -->
+								<div class="col-md-12 mdtop5">
+									<div>
+										<label class="labels">Jam Buka</label>
+									</div>
+									<div>
+										<label id="jam_buka" value=""></label>
 									</div>
 									<!-- <div>
-										<span th:text="${phone}"></span>
+										<label class="texts">Senin-Sabtu</label>
 									</div> -->
-								</div>
-								<!-- end of phone number-->
-
-								<!-- number of field -->
-								<div class="col-md-3 mdtop4">
-
-									<div>
-										<label class="labels">Jumlah Lapangan</label>
-									</div>
 									<!-- <div>
-										<span th:text="${view.numberOfField}"></span>
+										<label class="textes">08:00-20:00</label>
 									</div> -->
 								</div>
-								<!-- end of number of field -->
-							</div>
-
-							<!-- jam buka -->
-							<div class="col-md-12 mdtop5">
-								<div>
-									<label class="labels">Jam Buka</label>
-								</div>
-							
-								<div>
-									<label class="texts">Senin-Sabtu</label>
-								</div>
-								<div>
-									<label class="textes">08:00-20:00</label>
+								<!-- end of jam buka-->
+								<!-- harga-->
+								<div class="col-md-12 mdtop5">
+									<div>
+										<label class="labels">Harga Normal Per Jam</label>
+									</div>
+									<div>
+										<label id="harga" value=""></label>
+									</div>
 								</div>
 							</div>
-							<!-- end of jam buka-->
-							<!-- harga-->
-							<div class="col-md-12 mdtop5">
-								<div>
-									<label class="labels">Harga Normal Per Jam</label>
-								</div>
-								<!-- <div class="textes">
-									<span th:text="${view.price}"></span>
-								</div> -->
-
-							</div>
-							<!-- end of harga-->
 						</div>
+						<div class="col-lg-12"></div>
 					</div>
-					<div class="col-lg-12"></div>
-				</div>
-		
+
 					<script>
+					var textVal = [];
+					var fillLoc = [];
+					var countIndex = 0;
+					var loc2 = [];
+					var countListMap = 0;
+					var key=["idFutsalField","fieldName","latitude", "longitude"];
+					/* var listMapObject = new Object();
+					listMapObject.firstName = "John";
+					listMapObject.lastName = "Doe";
+					listMapObject.age = 50;
+					listMapObject.eyeColor = "blue"; */
+					$( "span" ).each( function( index, element ){
+					     textVal[index] = $(this).text();
+					     countIndex ++;
+					})
+					var loc = [];
+					/* $.each($('.listFieldMap'),function(index, value) {
+						var stringMap  = "";
+						for(var x = 0 ; x < 4 ; x ++){
+								if(x == 0) {
+									stringMap = stringMap + '{ "idFutsalField":'+textVal[countListMap] + ',';
+								}
+								else if(x == 1){
+									stringMap = stringMap + '"fieldName":'+ textVal[countListMap] + ',';
+								}
+								else if(x == 2){
+									stringMap = stringMap + '"latitude":'+ textVal[countListMap] + ',';
+								}
+								else{
+									stringMap = stringMap + '"longitude":'+ textVal[countListMap] + '},';
+								}
+								
+							countListMap++;
+						}
+						//fillLoc[index] = '{ "idFutsalField": , "fieldName": ,"latitude": , "longtitude":},';
+						fillLoc[index] = stringMap;
+						loc2[index] = stringMap;
+					}); */
+					
+					 $.each($('.listFieldMap'),function(index, value) {
+						 	var idFutsalField, fieldName, latitude, longitude;
+							for(var x = 0 ; x < 4 ; x ++){
+									if(x == 0) {
+										idFutsalField = textVal[countListMap];
+									}
+									else if(x == 1){
+										fieldName = textVal[countListMap];
+									}
+									else if(x == 2){
+										latitude = textVal[countListMap];
+									}
+									else{
+										longitude = textVal[countListMap];
+									}
+								countListMap++;
+							}
+							 loc.push({idFutsalField: idFutsalField, fieldName: fieldName, latitude: latitude, longitude : longitude});
+						});
+					
+				 	var loc2 = [	
+						 {
+							"idFutsalField": $('#idFutsalField').text(),
+							"fieldName": $('#fieldName').text(),
+							"latitude": $('#latitude').text(),
+							"longitude": $('#longitude').text()	
+						}
+					 ];
+					/* var obj = JSON.parse(loc[1]); */
+					//console.log(listMapObject);
+					console.log(loc2);
+					//console.log(fillLoc[8]);
+					//console.log(document.querySelector('span[name=fieldname]'));
+					/* $.each($('.listFieldMap'),function (index, value){
+					     //console.log($(value).html());
+					     console.log($(value).text())
+				    }); */
+					
+					/* $.each($('.listFieldMap'),function(index, value) {
+                        console.log(index + ':' + $(value).text());
+                    }); */					
+				        // Memunculkan semua data yang dibuat di var loc        
+				     /* $.each(loc, function(){
+				    	 $.each(this, function (name, value){
+				    		 console.log(name + '=' + value);;
+				    	 });
+				     }); */ 
+				      
+				      // Memunculkan semua data yang dibuat di database
+					/*  $.each(loc, function(){
+						 $.each($('.listFieldMap'),function(index, value) {
+										console.log(index + ':' + $(value).text());
+									});   
+				     }); */
+				     
 						function initMap() {
 							var map = new google.maps.Map(document
 									.getElementById('map'), {
 								zoom : 13,
-								disableDefaultUI: true,
 								center : {
 									lat : -6.197180299999999,
 									lng : 106.84686999999997
 								}
 							});
 							setMarkers(map);
-						}
-						var loc = [
-								[ 'Jl. Palmerah Barat No. 4, Jakarta Pusat',
-										-6.208116299999999, 106.7926943, 3 ],
-								[
-										'Jl. Asia Afrika Pintu IX, Gelora Senayan, Jakarta Pusat 10270',
-										-6.224614400000001, 106.79716540000004,
-										2 ],
-								[
-										'Jl. Raya Kebayoran Baru (Komplek Hankam), Jakarta Selatan',
-										-6.2272487, 106.77768279999998, 1 ],
-								[
-										'Jl. Raden Inten II No. 46, Duren Sawit, Jakarta Timur 13440',
-										-6.246799299999999, 106.91970630000003,
-										4 ],
-								[
-										'Jl. Danau Sunter Barat, Blok A4 No. 8-10, Jakarta Utara',
-										-6.1421, 106.85725400000001, 5 ],
-								[
-										'Jl. Raya Serpong Km 7, Kompleks Multi Guna Blok B2 No. 8, Tangerang',
-										-6.212711, 106.68357609999998, 6 ],
-								['Jl. Mangga Besar XI No.2, Tangki, Tamansari, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11170', -6.148039000000001,106.82568800000001, 7 ],
-								['RSCM, Kenari, Central Jakarta City, Jakarta, Indonesia', -6.197180299999999, 106.84686999999997, 8],
-								['Futsal Monas', -6.174511, 106.82896089999997, 9],
-								['Universitas Negeri Jakarta', -6.1946737, 106.87822979999999, 10]
-								];
-						
-						function setMarkers(map) {
-							var image = {
-								url : 'https://image.ibb.co/dznXH5/pointer.png',
-								
-								//url : 'https://image.ibb.co/kytxH5/selected_map.png',	
-								size : new google.maps.Size(50, 56),
-								origin : new google.maps.Point(0, 0),
-								anchor : new google.maps.Point(0, 50)
-							};
-
-							var shape = {
-								coords : [ 1, 1, 1, 50, 48, 50, 48, 1 ],
-								type : 'poly'
-							};
-							for (var i = 0; i < loc.length; i++) {
-								var locations = loc[i];
-								var marker = new google.maps.Marker({
-									position : {
-										lat : locations[1],
-										lng : locations[2]
-									},
-									map : map,
-									icon: image,
-									shape : shape,
-									title : locations[0],
-									zIndex : locations[3]
-								});
-								google.maps.event.addListener(marker, 'click',
-										function() {
-											map.setCenter(this.getPosition());
-											$(".form-box").removeClass("collapse");
-											$(this).addClass("collapse");
-										});
-								
-								
-								
-								/*	google.maps.event.addListener(marker,'click', function() {
-										map.setCenter(this.getPosition());
-										$(".form-box").addClass("collapse");	
-									});	
-						$(function(){
-								$('#content').load('bio.html .content'); // fill #content when page loads
-								$('#heading li').each(function() {
-								$('a', this).click(function(e){
-								e.preventDefault();
-								$('#content').load( $(this).attr('href') + ' .content' );
-								$('#heading li a').removeClass('selected');
-								$(this).addClass('selected');
-								});
-								});
-								});
-								 */
+							var markers = [];
+							function setMarkers(map) {
+								var image = {
+									url : 'https://image.ibb.co/dznXH5/pointer.png',
+									//url : 'https://image.ibb.co/kytxH5/selected_map.png',	
+									// Image When Click and Show Detail of Field
+									size : new google.maps.Size(50, 56),
+									origin : new google.maps.Point(0, 0),
+									anchor : new google.maps.Point(0, 50)
+								};
+								var shape = {
+									coords : [ 1, 1, 1, 50, 48, 50, 48, 1 ],
+									type : 'poly'
+								};
+								for (var i = 0; i < loc.length; i++) {
+									var locations = loc[i];
+									var latLng = new google.maps.LatLng(
+											locations.latitude, locations.longitude);
+									var marker = new google.maps.Marker({
+										position : latLng,
+										map : map,
+										icon : image,
+										shape : shape,
+										title : locations.fieldName,
+										id : locations.idFutsalField
+									});
+									google.maps.event
+											.addListener(
+													marker,
+													'click',
+													function() {
+														console.log(this.title);
+														console.log(this.id);
+														map.setCenter(this.getPosition());
+														$(".form-box")
+																.removeClass(
+																		"collapse");
+														bind(
+																this.title,
+																this.id
+																);
+														for (var j = 0; j < markers.length; j++) {
+															markers[j]
+																	.setIcon("https://image.ibb.co/dznXH5/pointer.png");
+														}
+														marker
+																.setIcon("https://image.ibb.co/kytxH5/selected_map.png");
+													});
+								}
 							}
 						}
+						function bind(title, idFutsalField) {
+							$('#surveyername').html(title);
+							$('#latestupdate').html(title);
+							$('#telepon').html(idFutsalField);
+							$('#jumlahlapangan').html(idFutsalField);
+							$('#jam_buka').html(idFutsalField);
+							$('#harga').html(idFutsalField);
+						}
 					</script>
-					<script async defer
-						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDByR5Y8ovC_QFWCQnHcdGYGYzqLZfZ1ew&callback=initMap">
-    </script>
-    <script src="/js/futsalfield.js"></script>
+					<script
+						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDByR5Y8ovC_QFWCQnHcdGYGYzqLZfZ1ew&callback=initMap">	
+					</script>
+					<script>	
+					</script>
+					<script src="/js/futsalfield.js"></script>
 				</div>
 			</div>
 		</div>
